23-AGIC-WAF-OWASP/kube-manifests/03-Ingress-WAF.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-waf
spec:
  ingressClassName: azure-application-gateway
  rules:
    - host: myapp1.kubeoncloud.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app1-nginx-clusterip-service
                port: 
                  number: 80
